[package]
name = "vortekia"
version = "0.1.0"
description = "A Tauri App"
authors = ["MJ"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } 
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"] }
sea-orm = { version = "1.1.6", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-cli = "1.1.6"
dotenv = "0.15.0"
anyhow = "1.0.96"
deadpool-redis = "0.20.0"
log = "0.4.26"
uuid = { version = "1.1", features = ["v4"] }
bcrypt = "0.15.1"
rust_decimal = "1.25"
chrono = "0.4"
futures = "0.3"
